src/style.scss
// Copyright (c) 2023 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

// Import Auro tokens
@import "@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
@import "@aurodesignsystem/design-tokens/dist/tokens/SassCustomProperties";
@import "@aurodesignsystem/webcorestylesheets/src/core";
@import "@aurodesignsystem/webcorestylesheets/src/breakpoints";
@import "@aurodesignsystem/webcorestylesheets/src/fonts";
@import "@aurodesignsystem/webcorestylesheets/src/essentials";


::slotted(auro-tabpanel) {
  flex-basis: 100%;
}

:host {
  position: relative;
  display: block;
}

.tabgroupContainer {
  display: flex;
  overflow: hidden visible;
  flex-direction: column;
  padding-bottom: calc(var(--ds-size-150, $ds-size-150) - 1px);
  margin-bottom: calc(var(--ds-size-50, $ds-size-50) + 1px);
  transition: scroll .5s ease-in-out;
}

.tabgroup {
  position: relative;
  display: flex;
  overflow: unset;
  width: fit-content;
  flex-wrap: nowrap;
  //padding-right: var(--ds-size-25, $ds-size-25);
  padding-bottom: 0;
  border-bottom: 1px solid var(--ds-color-border-divider-default, $ds-color-border-divider-default);
  //margin-left: var(--ds-size-25, $ds-size-25);
}

.slider  {
  position: absolute;
  bottom: -1px;
  left: 0;
  width: 0;
  height: calc(var(--ds-size-25, $ds-size-25) + 1px);
  background-color: var(--ds-color-ui-active-default, $ds-color-ui-active-default) ;
  transition: all .25s;
}

.chevronLeft,
.chevronRight {
  position: absolute;
  z-index: 10;
  top: 0;
  display: flex;
  height: inherit;
  align-items: center;
  padding: 0;
  border: none;
  background: var(--ds-color-background-primary-100-default, $ds-color-background-primary-100-default);
  cursor: pointer;
}

.icon {
  display: flex;
  width: calc(var(--ds-size-400, $ds-size-400) - var(--ds-size-50, $ds-size-50));
  height: calc(var(--ds-size-500, $ds-size-500) - var(--ds-size-50, $ds-size-50) - 1px);
  align-items: center;
  background-color: var(--ds-color-background-lightest, $ds-color-background-lightest);
  color: var(--ds-color-ui-default-default, $ds-color-ui-default-default);

  &:hover {
    color: var(--ds-color-ui-hover-default, $ds-color-ui-hover-default);
  }
}

.chevronRight {
  right: 0;
}

@media (width <= 767px) {
  .tabgroupContainer {
    overflow-x: scroll;
  }

  .tabgroup {
    width: fit-content;
  }

  .chevronLeft, .chevronRight {
    display: none;
  }
}

